added links to home page when clicking on logo

--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
 
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Luis Canahuate</a>
+      <a class="navbar-brand" href="home.html">Luis Canahuate</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -86,6 +86,9 @@
             </div>
           </div>
         </nav>
+        <div class= "footertext" >
+          <p> copyright ©</p>
+        </div>
           </ul>
     
         </nav>
