--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
      <link rel="stylesheet" href="style.css">
-    <title>Hello, world!</title>
+    <title>Luis Canahuate Page</title>
 
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Luis Canahuate</a>
+      <a class="navbar-brand" href="home.html">Luis Canahuate</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -87,6 +87,9 @@
           </div>
         </nav>
           </ul>
+          <div class= "footertext" >
+            <p> copyright ©</p>
+          </div>
     
         </nav>
       </footer>
