--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Hello, world!</title>
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Luis Canahuate</a>
+      <a class="navbar-brand" href="home.html">Luis Canahuate</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -73,6 +73,9 @@
           </div>
         </nav>
           </ul>
+          <div class= "footertext" >
+            <p> copyright ©</p>
+          </div>
     
         </nav>
       </footer>
