--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Hello, world!</title>
     <nav class="navbar navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Luis Canahuate</a>
+      <a class="navbar-brand" href="home.html">Luis Canahuate</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,7 +21,6 @@
           <a href="contact.html">Contact</a> 
           <a href="portfolio.html">Portfolio</a> 
           <a href="about.html">About me</a> 
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </div>
       </div>
     </nav>
@@ -73,7 +72,6 @@
               <a href="contact.html">Contact</a> 
               <a href="portfolio.html">Portfolio</a> 
               <a href="about.html">About me</a> 
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
             </div>
           </div>
         </nav>
