added several CSS styling for the footer, font style and Nav Bar. Updated HTML footer coding and attached links

--- a/contact.html
+++ b/contact.html
@@ -31,12 +31,12 @@
   <body>
     <div class="container">
         <div class="row">
-          <div class="col-sm">
+          <div class="col-sm-7">
            <h3> Contact me</h3> 
            <ul> 
-           <li><a href=mailto: luis.canahuate16@gmail.com >Email</li>
-           <li><a href="https://www.instagram.com/?hl=en">Instagram</a> </li>
-           <li><a href="https://www.linkedin.com/in/luis-canahuate-3aa23610a/">Linkedin</a></li>
+           <li><a href=mailto: luis.canahuate16@gmail.com ><p>Email</p></li>
+           <li><a href="https://www.instagram.com/?hl=en"><p>Instagram</p></a> </li>
+           <li><a href="https://www.linkedin.com/in/luis-canahuate-3aa23610a/"><p>Linkedin</p></a></li>
           </ul>
           </div>
         
@@ -51,27 +51,31 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
       </body>
-      <footer> 
-        <nav class="navbar navbar-dark bg-dark">
-          <a class="navbar-brand" href="#"></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" href="#"> <span class="sr-only">(current)</span></a>
-              <a href="home.html">Home</a> 
-              <a href="contact.html">Contact</a> 
-              <a href="portfolio.html">Portfolio</a> 
-              <a href="about.html">About me</a> 
-            </div>
-          </div>
-        </nav>
+      <footer>
+        <div class="contain">
+        <div class="col">
+          <ul>
+            <li><a href="home.html">Home</a></li>
           </ul>
-    
-        </nav>
-        <div class= "footertext" >
-          <p> copyright ©</p>
         </div>
+        <div class="col">
+          <ul>
+            <li><a href="contact.html">Contact me</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul>
+            <li><a href="portfolio.html">Portfolio</a></li>
+          </ul>
+        </div>
+        <div class="col">
+          <ul>
+            <li><a href="about.html">About me</a></li>
+          </ul>
+        </div>
+        </div>
+      <div class="clearfix"></div>
+      </div>
       </footer>
-    </html>
+      <!-- END OF FOOTER -->
+          </html>
