--- a/home.html
+++ b/home.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
      <link rel="stylesheet" href="style.css">
+     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
+
     <title>Hello, world!</title>
 
     <nav class="navbar navbar-dark bg-dark">
@@ -68,27 +71,32 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
       </body>
 
-      <footer> 
-        <nav class="navbar navbar-dark bg-dark">
-          <a class="navbar-brand" href="#"></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" href="#"> <span class="sr-only">(current)</span></a>
-              <a href="home.html">Home</a> 
-              <a href="contact.html">Contact</a> 
-              <a href="portfolio.html">Portfolio</a> 
-              <a href="about.html">About me</a> 
-            </div>
-          </div>
-        </nav>
-        <div class= "footertext" >
-          <p> copyright ©</p>
-        </div>
-          </ul>
-    
-        </nav>
-      </footer>
+     <!-- FOOTER START -->
+<footer>
+  <div class="contain">
+  <div class="col">
+    <ul>
+      <li><a href="home.html">Home</a></li>
+    </ul>
+  </div>
+  <div class="col">
+    <ul>
+      <li><a href="contact.html">Contact me</a></li>
+    </ul>
+  </div>
+  <div class="col">
+    <ul>
+      <li><a href="portfolio.html">Portfolio</a></li>
+    </ul>
+  </div>
+  <div class="col">
+    <ul>
+      <li><a href="about.html">About me</a></li>
+    </ul>
+  </div>
+  </div>
+<div class="clearfix"></div>
+</div>
+</footer>
+<!-- END OF FOOTER -->
     </html>
