--- a/index.html
+++ b/index.html
@@ -84,11 +84,31 @@
             </div>
           </div>
         </nav>
-          </ul>
-          <div class= "footertext" >
-            <p> copyright ©</p>
+        <footer>
+          <div class="contain">
+          <div class="col">
+            <ul>
+              <li><a href="home.html">Home</a></li>
+            </ul>
           </div>
-    
-        </nav>
-      </footer>
-    </html>
+          <div class="col">
+            <ul>
+              <li><a href="contact.html">Contact me</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <ul>
+              <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <ul>
+              <li><a href="about.html">About me</a></li>
+            </ul>
+          </div>
+          </div>
+        <div class="clearfix"></div>
+        </div>
+        </footer>
+        <!-- END OF FOOTER -->
+            </html>
