updated Bio and about me page with my personal information

--- a/home.html
+++ b/home.html
@@ -42,17 +42,17 @@
         </div>
 
       <div class="col-sm">
-          
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero molestias qui doloribus non velit dicta totam et aut, dolorem debitis soluta, sequi eveniet ipsum, labore est quidem repellat neque placeat.</p>
-           <p>Ratione voluptatum, eos error quisquam architecto labore quod aliquam adipisci dignissimos nemo hic? Nam ex accusamus quo sint tempora, dolorum aspernatur. Iure in ex praesentium inventore, eaque cum a nobis!</p>
-           <p>Ipsa officiis laborum natus? Iusto deleniti illum iure, quaerat obcaecati earum cumque aliquid fuga voluptas animi eaque accusantium saepe laboriosam nesciunt, inventore nostrum corrupti reprehenderit hic. Quos cupiditate fuga eligendi.</p>
-           <p>Voluptatem, commodi! Quis cupiditate maiores saepe dicta, inventore quibusdam eum quam modi magni est doloribus illo ex nemo mollitia quas deserunt, ad, veritatis nulla odio voluptas voluptates quasi asperiores nihil.</p>
+          <h5> Hello viewer</h5>
+           <p> Hello and welcome again to my page. I'm excited to present the first iteretion of my portfolio.</p>
+           <p>With my knowledge and current skills along with the assistance of the mighty Google, I've beena able to put all of this together! </p>
+           <p>In this early vesion of the portfolio you will fine full mobile resposiveness which should make your visit here more plesant and seamless.</p>
+           <p>Feel free to take a look at wha I've done so far and reach out with questions or praises to the email found under 'Contact Me'</p>
            <ul>
-            <li>Something</li>
-            <li>Something</li>
-            <li>Something</li>
-            <li>Something</li>
-            <li>Something</li>
+             <h5>What to expect</h5>
+            <li>See notable month to month improvement</li>
+            <li>More conetnt being added</li>
+            <li>A potentially different looking website each time you visit</li>
+            <li>Still all the fun!</li>
            </ul>           
       </div>
           
