--- a/about.html
+++ b/about.html
@@ -33,16 +33,19 @@
         <div class="row">
           <div class="col-sm">
            <h1> About me</h1> 
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate rem, recusandae, ratione laborum atque quas eligendi facilis incidunt ipsam aperiam debitis, aut expedita dignissimos neque animi ullam. Vero, magnam explicabo.</p>
+           <p>Here is a brief introduction about myself. My Name is Luis Canahuate and I am currently 26 year's old. I was born and raised in the Dominiacan Republic in the capital called Santo Domingo, which fun fact, translates to "Holy Sunday"</p>
+           <p>I moved to the United Stated when I was 16 years olds, and what can I say, it was not as I had imagine it from watching hollywood movies. It has been quite a ride from going to highschool while learning the language, getting lost on my way home from my first day of class, getting my first car, teaching myself to play the pianoa and practicing for hours as I had no friend and then fianlly, making friends and much more!</p>
+           <P>Needless to say, I've already grown acostume to the life here. I finished my Bachelor's Degree on Integrated Science, Business and Technology with a concertration on Biotechnology. If that doesn't screem Programmer, then you are correct!</P>
+           <p>So why programming? I have always been drawn to creative approaches and has always thought to be good at problem solving and delivering niftys solutions! There's a certain freedom of creation that I wish to attain by becoming a well versed programmer. </p>
           </div>
           <div class="col-sm">
-              <h3>Skills</h3>
+              <h3>Current Skills</h3>
               <ul>
-                <li>Something</li>
-                <li>Something</li>
-                <li>Something</li>
-                <li>Something</li>
-                <li>Something</li>
+                <li>A bit of HTML</li>
+                <li>A sprinkle of CSS</li>
+                <li>An even smaller sprikle of JS</li>
+                <li>Gaining familiarity with Gitbash/Github</li>
+                
       
               </ul>
           </div>    
