--- a/home.html
+++ b/home.html
@@ -44,9 +44,9 @@
       <div class="col-sm">
           <h5> Hello viewer</h5>
            <p> Hello and welcome again to my page. I'm excited to present the first iteretion of my portfolio.</p>
-           <p>With my knowledge and current skills along with the assistance of the mighty Google, I've beena able to put all of this together! </p>
+           <p>With my knowledge and current skills along with the assistance of the mighty Google, I've been able to put all of this together! </p>
            <p>In this early vesion of the portfolio you will fine full mobile resposiveness which should make your visit here more plesant and seamless.</p>
-           <p>Feel free to take a look at wha I've done so far and reach out with questions or praises to the email found under 'Contact Me'</p>
+           <p>Feel free to take a look at what I've done so far and reach out with questions or praises to the email found under 'Contact Me'</p>
            <ul>
              <h5>What to expect</h5>
             <li>See notable month to month improvement</li>
