--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
      <link rel="stylesheet" href="style.css">
-    <title>Luis Canahuate Page</title>
+     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
+
+    <title>Hello, world!</title>
 
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="home.html">Luis Canahuate</a>
@@ -39,17 +42,17 @@
         </div>
 
       <div class="col-sm">
-          
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero molestias qui doloribus non velit dicta totam et aut, dolorem debitis soluta, sequi eveniet ipsum, labore est quidem repellat neque placeat.</p>
-           <p>Ratione voluptatum, eos error quisquam architecto labore quod aliquam adipisci dignissimos nemo hic? Nam ex accusamus quo sint tempora, dolorum aspernatur. Iure in ex praesentium inventore, eaque cum a nobis!</p>
-           <p>Ipsa officiis laborum natus? Iusto deleniti illum iure, quaerat obcaecati earum cumque aliquid fuga voluptas animi eaque accusantium saepe laboriosam nesciunt, inventore nostrum corrupti reprehenderit hic. Quos cupiditate fuga eligendi.</p>
-           <p>Voluptatem, commodi! Quis cupiditate maiores saepe dicta, inventore quibusdam eum quam modi magni est doloribus illo ex nemo mollitia quas deserunt, ad, veritatis nulla odio voluptas voluptates quasi asperiores nihil.</p>
+          <h5> Hello viewer</h5>
+           <p> Hello and welcome again to my page. I'm excited to present the first iteretion of my portfolio.</p>
+           <p>With my knowledge and current skills along with the assistance of the mighty Google, I've been able to put all of this together! </p>
+           <p>In this early vesion of the portfolio you will fine full mobile resposiveness which should make your visit here more plesant and seamless.</p>
+           <p>Feel free to take a look at what I've done so far and reach out with questions or praises to the email found under 'Contact Me'</p>
            <ul>
-            <li>Something</li>
-            <li>Something</li>
-            <li>Something</li>
-            <li>Something</li>
-            <li>Something</li>
+             <h5>What to expect</h5>
+            <li>See notable month to month improvement</li>
+            <li>More conetnt being added</li>
+            <li>A potentially different looking website each time you visit</li>
+            <li>Still all the fun!</li>
            </ul>           
       </div>
           
@@ -68,47 +71,32 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
       </body>
 
-      <footer> 
-        <nav class="navbar navbar-dark bg-dark">
-          <a class="navbar-brand" href="#"></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" href="#"> <span class="sr-only">(current)</span></a>
-              <a href="home.html">Home</a> 
-              <a href="contact.html">Contact</a> 
-              <a href="portfolio.html">Portfolio</a> 
-              <a href="about.html">About me</a> 
-            </div>
-          </div>
-        </nav>
-        <footer>
-          <div class="contain">
-          <div class="col">
-            <ul>
-              <li><a href="home.html">Home</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <ul>
-              <li><a href="contact.html">Contact me</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <ul>
-              <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-          </div>
-          <div class="col">
-            <ul>
-              <li><a href="about.html">About me</a></li>
-            </ul>
-          </div>
-          </div>
-        <div class="clearfix"></div>
-        </div>
-        </footer>
-        <!-- END OF FOOTER -->
-            </html>
+     <!-- FOOTER START -->
+<footer>
+  <div class="contain">
+  <div class="col">
+    <ul>
+      <li><a href="home.html">Home</a></li>
+    </ul>
+  </div>
+  <div class="col">
+    <ul>
+      <li><a href="contact.html">Contact me</a></li>
+    </ul>
+  </div>
+  <div class="col">
+    <ul>
+      <li><a href="portfolio.html">Portfolio</a></li>
+    </ul>
+  </div>
+  <div class="col">
+    <ul>
+      <li><a href="about.html">About me</a></li>
+    </ul>
+  </div>
+  </div>
+<div class="clearfix"></div>
+</div>
+</footer>
+<!-- END OF FOOTER -->
+    </html>
