--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
           <div class="col-sm">
            <h1 class="portfolio"> My Portfolio</h1> 
             
-               <img src="https://via.placeholder.com/300.png/09f/fffC/O https://placeholder.com/" alt="placeholder"> 
+               <img src="image/GentrificationProject.PNG" alt="Gentrification Project"> 
                <img src="https://via.placeholder.com/300/09f.png/fffC/O https://placeholder.com/" alt="Placeholder2">
                <img src="https://via.placeholder.com/300/09f.png/fffC/O https://placeholder.com/" alt="Placeholder2">
 
