--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
         <div class="row">
           <div class="col-sm">
            <h1> Welcome to my page!</h1> 
-          <img src="me.png.jpg" alt="My photo" width="400px" height="500px">
+          <img id = myPicture src="me.png.jpg" alt="My photo" width="400px" height="500px">
         
         </div>
 
