made changes to footer and portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,36 +32,36 @@
     <div class="container">
         <div class="row">
           <div class="col-sm">
-           <h1 class="portfolio"> My Portfolio</h1> 
+           <h1 class="portfolio"> Portfolio</h1> 
             <div class = 'box'> 
-               <img src="image/GentrificationProject.PNG" alt="Gentrification Project">  
-               <p> By using API keys that cross reference the housing data in the greater Philadelphia area, as well as AQI information, we have created an engaging tool that 
+              <h2>Fair Rental Market Price Calculator</h2>
+               <img class = "image" src="image/GentrificationProject.PNG" alt="Gentrification Project">  
+               <img class = "image" src="image/Gentrification responses.PNG" alt="GentrificationProject">
+               <p> By utilizing HUD'S API that cross reference the housing data in the greater Philadelphia area, as well as AQI information, we have created an engaging tool that 
                  potential renters can use to gauge the fair market rental costs and air quality data in the area in which they are looking to move relying on the information 
                  given from a potential landlord on rent price, the zip code and the number of bedrooms required by the potential tenant.</p>
 
                  <a href="https://nicolas-tomlinsonstjuste.github.io/Gentrification-Sucks/"> <spam class ='links'> Link to website</spam></a>
-               
+                 <a href="https://github.com/nicolas-tomlinsonstjuste/Gentrification-Sucks"> <spam class ='links'> Link to Github Repository</spam></a>
             </div>
             <br>
             <div> 
-               <img src="image/Work-Day-Scheduler.PNG" alt="Work-Day-Scheduler">
-               <p>Scheduler that allows the user to save tasks on their local storage. In addition, each task is color coded based on if the task has already past (red) 
-                 if the task is due at the current hour (Gray) or if the task is later in the future (Green)</p>
+                <h2>Daily Schedule Planner</h2>
+               <img class = "image" src="image/Work-Day-Scheduler.PNG" alt="Work-Day-Scheduler">
+               <p>Scheduler that allows the user to save tasks on their local storage. In addition, the tasks are color coded based on the following: Green: if the task is due at a future hour. 
+                 Gray: If the task is currently due. Red: If the task was due in the past. 
+               </p>
                  <a href="https://canahuate16.github.io/Work_Day_Scheduler/"> <spam class ='links'> Link to website</spam></a> 
 
             </div>
             <br>
             <div> 
-               <img src="image/Weather-Dashboard.PNG" alt="Weather-Dashboard-current">
+              <h2>Weather Dashboard</h2>
+               <img class = "image" src="image/Weather-Dashboard.PNG" alt="Weather-Dashboard-current">
                <p>This website allows users to search for a city and when submitting, it will provide the current weather details including the temperature, the humidity,
-                  wind speed and the 5 day temperature forecast for the city searched. In addition, the website displays the current date for the user on page load.<spam class ='links'> Link to website</spam></p>
+                  wind speed and the 5 day temperature forecast for the city searched. In addition, the website displays the current date for the user on page load.</p>
 
                   <a href="https://canahuate16.github.io/Weather-Dashboard/"><spam class ='links'> Link to website</spam></a>
-
-               <img src="image/Weather-Dashboard2.PNG" alt="Weather Dashboard-forecast">
-               <p>5 day forecast Display</p>
-
-               <a href="https://canahuate16.github.io/Weather-Dashboard/"><spam class ='links'> Link to website</spam></a> </a>
            </div>
             
           </div>
