updated about me page skills section

--- a/about.html
+++ b/about.html
@@ -39,14 +39,14 @@
            <p>So why programming? I have always been drawn to creative approaches and have always thought to be good at problem solving and delivering nifty solutions! There's a certain freedom of creation that I wish to attain by becoming a well versed programmer. </p>
           </div>
           <div class="col-sm">
-              <h3>Current Skills</h3>
+              <h3>Skills</h3>
               <ul>
-                <li>A bit of HTML</li>
-                <li>A sprinkle of CSS</li>
-                <li>An even smaller sprikle of JS</li>
-                <li>Gaining familiarity with Gitbash/Github</li>
-                
-      
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JavaScript</li>
+                <li>jQuery</li>
+                <li>Bootstrap</li>
+                <li>Node.JS</li>
               </ul>
           </div>    
           </div>
