--- a/portfolio.html
+++ b/portfolio.html
@@ -52,6 +52,7 @@
                  Gray: If the task is currently due. Red: If the task was due in the past. 
                </p>
                  <a href="https://canahuate16.github.io/Work_Day_Scheduler/"> <spam class ='links'> Link to website</spam></a> 
+                 <a href="https://github.com/canahuate16/Work_Day_Scheduler"> <spam class ='links'> Link to Github Repository</spam></a>
 
             </div>
             <br>
@@ -62,6 +63,7 @@
                   wind speed and the 5 day temperature forecast for the city searched. In addition, the website displays the current date for the user on page load.</p>
 
                   <a href="https://canahuate16.github.io/Weather-Dashboard/"><spam class ='links'> Link to website</spam></a>
+                  <a href = "https://github.com/canahuate16/Weather-Dashboard"><spam class ='links'> Link to Github Repository</spam></a>
            </div>
             
           </div>
