added download link to resume

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,7 @@
            <li><a href=mailto: luis.canahuate16@gmail.com ><p>Email</p></li>
            <li><a href="https://www.instagram.com/?hl=en"><p>Instagram</p></a> </li>
            <li><a href="https://www.linkedin.com/in/luis-canahuate-3aa23610a/"><p>Linkedin</p></a></li>
+           <li> <a href="Luis-Canahuate-Resume.docx" download="Luis-Canahuate-Resume"><p>Download Resume</p></a></li>
           </ul>
           </div>
         
