--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
      <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>Luis Canahuate Repository</title>
 
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="home.html">Luis Canahuate</a>
