added phone number and updated HREFs to open on new tab

--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
                     <div class="text">
                         I'm Luis and I'm a <span class="typing-2"></span></div>
                     <p>
-                        Talented Junior Software Engineer offering 4 years of transferable skills and experience working on Agile development and top notch abilities in organizing workflows, solving complex problems and making accurate decisions based on sound judgment and analytical strengths. Fluent both in English and Spanish.
+                        Talented Junior Software Engineer offering 4 years of transferable skills and experience working
+                        on Agile development and top notch abilities in organizing workflows, solving complex problems
+                        and making accurate decisions based on sound judgment and analytical strengths. Fluent both in
+                        English and Spanish.
                     </p>
                     <a href="Luis_Canahuate_Resume.pdf" download> Download Resume</a>
                 </div>
@@ -203,7 +206,7 @@
                     <div class="box">
                         <img src="Koala.PNG" alt="">
                         <div class="text">
-                            <a class="project-img" href="https://canahuate16.github.io/koala-sanctuary/">Koala
+                            <a class="project-img" href="https://canahuate16.github.io/koala-sanctuary/" target="_blank" rel="noopener noreferrer">Koala
                                 Sanctuary</a></div>
 
 
@@ -215,7 +218,7 @@
                     <div class="box">
                         <img src="Note-taker.PNG" alt="Note-Taker">
                         <div class="text">
-                            <a class="project-img" href="https://note-taker-proj.herokuapp.com/">Note Taker</a></div>
+                            <a class="project-img" href="https://note-taker-proj.herokuapp.com/" target="_blank" rel="noopener noreferrer">Note Taker</a></div>
                         <p>
                             Application that can be used to write, save, and delete notes..</p>
                     </div>
@@ -224,7 +227,7 @@
                     <div class="box">
                         <img src="Burger.PNG" alt="">
                         <div class="text">
-                            <a class="project-img" href="https://burger-logger-proj.herokuapp.com/">Burger Logger</a>
+                            <a class="project-img" href="https://burger-logger-proj.herokuapp.com/" target="_blank" rel="noopener noreferrer">Burger Logger</a>
                         </div>
                         <p>
                             Full Stack web application usign MySQL, Node, Handlebars and ORM.</p>
@@ -235,7 +238,7 @@
                         <img src="Template-engine.PNG" alt="">
                         <div class="text">
                             <a class="project-img"
-                                href="https://github.com/canahuate16/Template-Engine-Employee-Summary"> Template
+                                href="https://github.com/canahuate16/Template-Engine-Employee-Summary"target="_blank" rel="noopener noreferrer">Template
                                 Engine</a></div>
                         <p>
                             CMS Command line application to manage employee roles.</p>
@@ -245,7 +248,7 @@
                     <div class="box">
                         <img src="weather.PNG" alt="">
                         <div class="text">
-                            <a class="project-img" href="https://canahuate16.github.io/Weather-Dashboard/">Weather
+                            <a class="project-img" href="https://canahuate16.github.io/Weather-Dashboard/" target="_blank" rel="noopener noreferrer">Weather
                                 Dashboard</a></div>
                         <p>
                             App that connects to a weather API and displays a 5 day forecast.</p>
@@ -292,6 +295,16 @@
                                     Email</div>
                                 <div class="sub-title">
                                     luis.canahuate16@gmail.com</div>
+
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-phone-square-alt"></i>
+                            <div class="info">
+                                <div class="head">
+                                    Phone</div>
+                                <div class="sub-title">
+                                    267-349-1228</div>
 
                             </div>
                         </div>
