--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="_" />
     <meta name="title" property="og:title" content="Luis Canahuate Portfolio" />
     <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://canahuate16.github.io/Portfolio/porfolio-img.PNG" />
+    <meta name="image" property="og:image" content="[Image URL here]">
     <meta name="description" property="og:description" content="Luis Canahuate Portfolio" />
-    <meta name="author" content="_" />
+    <meta name="author" content="[Luis Canahuate]" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Somehow I got an error, so I comment the title, just uncomment to show -->
+
     <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -359,8 +358,7 @@
 
     <!-- footer section start -->
     <footer>
-        <!-- <span>Created By <a href="#">Luis Canahuate</a> | <span class="far fa-copyright"></span> 2020 All rights
-            reserved.</span> -->
+        <span>Created By <a href="#">Luis Canahuate</a>
     </footer>
 
     <!-- Somehow I got an error, so I comment the script tag, just uncomment to use -->
