--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="#">Luis Canahuate</a>
+        <span>Created By <a href="#">Luis Canahuate</a> </span>
     </footer>
 
     <!-- Somehow I got an error, so I comment the script tag, just uncomment to use -->
